Migrate API usage not available in JDK 8. Specify release=8 in building scripts.